--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 	testImplementation platform('org.assertj:assertj-bom:3.25.1')
 	testImplementation('org.junit.jupiter:junit-jupiter')
 	testImplementation('org.assertj:assertj-core')
+	implementation("com.google.guava:guava:31.1-jre")
 }
 
 tasks.named('test') {
